package pumlFromJava;

import javax.lang.model.element.Element;

public class Methode {
    Element methode;
    public Methode(Element methode) {
        this.methode = methode;
    }

    public String toDCC() {
        String res = "";
        Modifier mod = new Modifier(methode.getModifiers());
        res += mod.getModifierString() + methode.getSimpleName() + "(";
        Parameters param = new Parameters(methode);
        res += param.getParameters() + ")";
        if(param.getRetour().length() > 0){
            res+= " : " + param.getRetour();
        }

        return res;
    }
}
